<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_onPrimary"
    tools:context=".ui.authentication.register.RegisterFragment">

    <ImageView
        android:id="@+id/user_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_very_small"
        android:src="@drawable/tennis_player_icon"
        app:layout_constraintBottom_toTopOf="@id/email_text_view"
        app:layout_constraintEnd_toStartOf="@+id/register_text_view"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/md_theme_onSurface_highContrast" />

    <TextView
        android:id="@+id/register_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/md_theme_onSurface_highContrast"
        android:textSize="@dimen/text_xlarge"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/user_image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/user_image_view"
        app:layout_constraintTop_toTopOf="@id/user_image_view" />

    <TextView
        android:id="@+id/email_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/email"
        android:textColor="@color/md_theme_onSurface_highContrast"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/email_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_text_view" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_medium"
        android:background="@drawable/custom_edit_text_cut"
        android:drawableStart="@drawable/profile_icon"
        android:drawablePadding="@dimen/padding_small"
        android:drawableTint="@color/md_theme_onSecondaryFixed_highContrast"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="@dimen/padding_small"
        android:paddingStart="@dimen/padding_small"
        android:paddingEnd="@dimen/padding_small"
        android:textColor="@color/md_theme_onSecondaryFixed_highContrast"
        android:textColorHint="@color/md_theme_default"
        android:textCursorDrawable="@null"
        app:layout_constraintBottom_toTopOf="@id/password_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_text_view" />

    <TextView
        android:id="@+id/password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/password"
        android:textColor="@color/md_theme_onSurface_highContrast"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/password_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_edit_text" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_medium"
        android:background="@drawable/custom_edit_text_cut"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="@dimen/padding_small"
        android:drawableTint="@color/md_theme_onSecondaryFixed_highContrast"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="@dimen/padding_small"
        android:paddingStart="@dimen/padding_small"
        android:paddingEnd="@dimen/padding_small"
        android:textColor="@color/md_theme_onSecondaryFixed_highContrast"
        android:textColorHint="@color/md_theme_default"
        android:textCursorDrawable="@null"
        app:layout_constraintBottom_toTopOf="@id/password_confirmation_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_text_view" />

    <TextView
        android:id="@+id/password_confirmation_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/password_confirmation"
        android:textColor="@color/md_theme_onSurface_highContrast"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/password_confirmation_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_edit_text" />

    <EditText
        android:id="@+id/password_confirmation_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_medium"
        android:background="@drawable/custom_edit_text_cut"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="@dimen/padding_small"
        android:drawableTint="@color/md_theme_onSecondaryFixed_highContrast"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="@dimen/padding_small"
        android:paddingStart="@dimen/padding_small"
        android:paddingEnd="@dimen/padding_small"
        android:textColor="@color/md_theme_onSecondaryFixed_highContrast"
        android:textColorHint="@color/md_theme_default"
        android:textCursorDrawable="@null"
        app:layout_constraintBottom_toTopOf="@id/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_confirmation_text_view" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_medium"
        android:enabled="false"
        android:text="@string/account_confirmation"
        android:textColor="@color/md_theme_onSecondaryFixed_highContrast"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/back_to_login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_confirmation_edit_text" />

    <Button
        android:id="@+id/back_to_login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_medium"
        android:text="@string/back_to_login_page"
        android:textColor="@color/md_theme_onSecondaryFixed_highContrast"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/register_loading_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_button" />

    <ProgressBar
        android:id="@+id/register_loading_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_marginBottom="@dimen/margin_medium"
        android:indeterminate="true"
        android:tint="@color/md_theme_primary"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/register_loading_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_to_login_button" />

    <TextView
        android:id="@+id/register_loading_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_loading_message"
        android:textColor="@color/md_theme_onSurface_highContrast"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_loading_spinner" />
</androidx.constraintlayout.widget.ConstraintLayout>